--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -4,9 +4,11 @@
     "outDir": "../out-tsc/spec",
     "module": "commonjs",
     "types": [
-      "jasmine",
-      "node"
-    ]
+      "node",
+      "jest"
+    ],
+    "allowJs": true,
+    "baseUrl": "./"
   },
   "files": [
     "test.ts",
