--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^22.2.0",
     "@types/node": "~8.9.4",
+    "angular-in-memory-web-api": "^0.6.1",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -47,7 +49,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
-    "@types/jest": "^22.2.0"
+    "typescript": "~2.7.2"
   }
 }
