--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^23.6.0",
+    "jest-marbles": "^2.0.0",
     "jest-preset-angular": "^6.0.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
